--- a/saas/style.sass
+++ b/saas/style.sass
@@ -1,5 +1,7 @@
 //Подключение переменных
 @import 'variables'
+//подключение normoliza
+@import 'normolize'
 //Подключение базовых настроек
 @import 'settings'
 //Стили блока header
