--- a/saas/style.sass
+++ b/saas/style.sass
@@ -6,5 +6,9 @@
 @import 'settings'
 //Стили блока header
 @import 'blocks/header'
+//Хлебные крошки
+@import 'blocks/breadcrumb'
+//Стили блока hotel
+@import 'blocks/hotel'
 //Подключение стилей для адаптива
 @import 'media'
