--- a/saas/blocks/_hotel.sass
+++ b/saas/blocks/_hotel.sass
@@ -26,6 +26,14 @@
   &-description
     font-size: 12px
     line-height: 15px
+  &-grid
+    display: flex
+    justify-content: space-between
+
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
 
 .stars
   flex-basis: 100% //задаем ширину звездочкам 100% а остальные элементы(название отеля и flash offer) переносятся на другую строку
@@ -94,3 +102,85 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
+
+.booking
+  font-family: Nunito
+  border-radius: 8px
+  width: 350px
+  min-height: 210px
+  padding: 28px
+  background-color: $dark
+  color: $light
+
+  &__info
+    //border: 1px solid red
+    display: flex
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    //border: 1px solid green
+    display: flex
+    flex-direction: column
+  &__start
+    font-weight: normal
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-style: normal
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__room
+    margin-top: 4px
+
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__dexcription
+    margin-left: 9px
+  &__call-center
+    display: flex
+    justify-content: space-between
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+    margin-bottom: 17px
+  &__heading
+    font-style: normal
+
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    color: inherit
+    text-decoration: none
+  &__num
+    margin-left: 8px
+  &__button
+    width: 100%
+    min-height: 45px
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    border-radius: 4px
+    background-color: $primary
+    border: none
+    color: $light
+    cursor: pointer
+.map
+  width: 347px
+  height: 213px
+  background-color: #000
+  border-radius: 4px
