--- a/saas/blocks/_hotel.sass
+++ b/saas/blocks/_hotel.sass
@@ -61,7 +61,7 @@
     line-height: 18px
 .swiper
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -78,6 +78,7 @@
 
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50% //*двигает всю кнопку вниз на 50% полуаюся кнопки чуть ниже на 15px
@@ -183,4 +184,5 @@
   width: 347px
   height: 213px
   background-color: #000
-  border-radius: 4px
+  border-radius: 10px
+  overflow: hidden //все что вываливает за границы - прячем
