--- a/saas/_media.sass
+++ b/saas/_media.sass
@@ -10,7 +10,8 @@
         height: 100%
         object-fit: cover //картинка не сжимаетсяпо пропорция а обрезается, на слэнге кропается
 @media (max-width: 992px)
-  .container
+  .container,
+  .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -46,7 +47,8 @@
     width: 340px
 
 @media (max-width: 768px)
-  .container
+  .container,
+  .newsletter-wrapper
     max-width: 576px
     width: 92%
     .navbar
@@ -98,6 +100,10 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      flex-direction: column
+      align-items: flex-start
 
 @media (max-width: 576px)
   .logo
@@ -107,3 +113,10 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-bottom: 37px
+
+  .subscribe
+    width: 100%
