create: added reviews section and fix hotelslider

--- a/saas/style.sass
+++ b/saas/style.sass
@@ -10,7 +10,10 @@
 @import 'blocks/breadcrumb'
 //Стили блока hotel
 @import 'blocks/hotel'
+
 //Стили блока newsletter
 @import 'blocks/newsletter'
+//Стили блока отзывов 
+@import 'blocks/reviews'
 //Подключение стилей для адаптива
 @import 'media'
