--- a/saas/blocks/_hotel.sass
+++ b/saas/blocks/_hotel.sass
@@ -34,6 +34,51 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+  &-slider
+    width: 728px
+    height: 450px
+    &__item
+      width: 100%
+      height: 100%
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      &::after
+        content: ''
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0
+        bottom: 0
+        left: 0
+        right: 0
+        background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+        z-index: 10
+
+    &__button
+      position: absolute
+      top: 50% //*двигает всю кнопку вниз на 50% полуаюся кнопки чуть ниже на 15px
+      transform: translateY(-50%) //*двигаем вверх на 50% относительно своей высоты указанной в width: 30px, то на 15px
+      height: 30
+      margin-top: 15px
+      z-index: 99
+      width: 30px
+      height: 30px
+      border: none
+
+      cursor: pointer
+      background-repeat: no-repeat
+      background-position: center
+      background-size: 10px
+      background-color: transparent //фон книпки прозорачный
+
+      &--next
+        right: 18px
+        background-image: url(../img/arrow-next.svg)
+
+      &--prev
+        left: 18px
+        background-image: url(../img/arrow-prev.svg)
 
 .stars
   flex-basis: 100% //задаем ширину звездочкам 100% а остальные элементы(название отеля и flash offer) переносятся на другую строку
@@ -59,50 +104,6 @@
   &__counter
     font-size: 14px
     line-height: 18px
-.swiper
-  width: 100%
-  height: 100%
-  position: relative
-  border-radius: 8px
-  &::after
-    content: ''
-    position: absolute
-    width: 100%
-    height: 100%
-    top: 0
-    bottom: 0
-    left: 0
-    right: 0
-    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-    z-index: 10
-
-.slider
-  width: 728px
-  height: 450px
-  &-button
-    position: absolute
-    top: 50% //*двигает всю кнопку вниз на 50% полуаюся кнопки чуть ниже на 15px
-    transform: translateY(-50%) //*двигаем вверх на 50% относительно своей высоты указанной в width: 30px, то на 15px
-    height: 30
-    margin-top: 15px
-    z-index: 99
-    width: 30px
-    height: 30px
-    border: none
-
-    cursor: pointer
-    background-repeat: no-repeat
-    background-position: center
-    background-size: 10px
-    background-color: transparent //фон книпки прозорачный
-
-    &--next
-      right: 18px
-      background-image: url(../img/arrow-next.svg)
-
-    &--prev
-      left: 18px
-      background-image: url(../img/arrow-prev.svg)
 
 .booking
   font-family: Nunito
