--- a/saas/_media.sass
+++ b/saas/_media.sass
@@ -1,10 +1,10 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
-  .swiper
-    &-slide
+  .hotel
+    &-slider
+      width: 590px
+    &-slider
       &__image
         width: 100%
         height: 100%
@@ -36,15 +36,19 @@
       flex-direction: column
     &__slider
       margin-bottom: 30px
+    &-slider
+      width: 100%
     &-right
       flex-direction: row
   .booking
     width: 340px
 
-  .slider
-    width: 100%
   .map
     width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
 
 @media (max-width: 768px)
   .container,
@@ -90,12 +94,13 @@
       &__offer
         order: -1
         margin-left: 0
-  .slider
-    height: 350px
+
   .hotel
     &-right
       flex-direction: column
       min-height: 450px
+    &-slider
+      height: 350px
   .booking
     width: 100%
   .map
@@ -104,15 +109,36 @@
     &-wrapper
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:after, &:before
+          display: none
+      &__button
+        top: 32px
+
+        &--prev
+          // border: 2px solid red
+          margin-left: -65px
+          left: 50%
+          transform: translate(-50%, 0)
+        &--next
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
 
 @media (max-width: 576px)
   .logo
     width: 99px
   .slider
-    height: 250px
+
   .hotel
     &__slider
       margin-bottom: 20px
+    &-slider
+      height: 250px
+
   .newsletter
     padding: 76px 0 83px 0
     &__title
