create: added activities section

--- a/saas/_media.sass
+++ b/saas/_media.sass
@@ -9,6 +9,9 @@
         width: 100%
         height: 100%
         object-fit: cover //картинка не сжимаетсяпо пропорция а обрезается, на слэнге кропается
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container,
   .newsletter-wrapper
@@ -49,7 +52,14 @@
     &-slider
       &__item
         max-width: 580px
-
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 250px
 @media (max-width: 768px)
   .container,
   .newsletter-wrapper
@@ -127,6 +137,13 @@
           right: 50%
           margin-right: -65px
           transform: translate(50%, 0)
+  .activities
+    padding-top: 40px
+    padding-bottom: 60px
+
+  .card
+    width: 49%
+    height: 255px
 
 @media (max-width: 576px)
   .logo
@@ -145,4 +162,6 @@
       margin-bottom: 37px
 
   .subscribe
+    width: 100%
+  .card
     width: 100%
