--- a/saas/style.sass
+++ b/saas/style.sass
@@ -15,5 +15,7 @@
 @import 'blocks/newsletter'
 //Стили блока отзывов 
 @import 'blocks/reviews'
+//Стили блока развлечений
+@import 'blocks/activities'
 //Подключение стилей для адаптива
 @import 'media'
